<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="url_label">Urls</string>
    <string name="browse_label">Browse</string>
    <string name="settings_label">Settings</string>
    <string name="add_new_url_label">Add a new URL</string>
    <string name="now_playing_label">Play queue</string>
    <string name="media_player_label">Now playing</string>
	<string name="alarm_clock_label">Alarm Clock</string>
	<string name="set_alarm_label">Set Alarm</string>
    <string name="devices_label">Devices</string>
    <string name="autostart_label">Auto start</string>
    <string name="opening_url_message">Opening URL&#8230;</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="store_playlist_entries">Store individual playlist entries</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="url_not_opened_message">The url could not be opened.</string>
	<string name="find_barcode_scanner_message">This feature requires the ZXing barcode scanner. Find this application?</string>
	<string name="donation_successful_message">Thank you for your donation!</string>
    <string name="rate_application">Would you like to rate this application in the Android market? Feedback is appreciated.</string>
	<string name="rate_pos">"Yes, take me to the market"</string>
	<string name="rate_neg">"No, and don\'t ask again"</string>
    <string name="list_menu_backup">Backup</string>
    <string name="list_menu_effects">Sound effects</string>
	<string name="list_menu_refresh">Refresh</string>
	<string name="list_menu_scan">Scan</string>
	<string name="list_menu_search">Search</string>
    <string name="list_menu_stop">Stop</string>
	<string name="bind_never">Never connected</string>
	<string name="bind_minutes">%1$s minutes ago</string>
	<string name="bind_hours">%1$s hours ago</string>
	<string name="bind_days">%1$s days ago</string>
	<string name="share_signature">%1$s \n\n\n\nSent using %2$s</string>
    <string name="add_to_playlist_label">Add to playlist</string>
    <string name="autostart_on_bluetooth">Auto start with bluetooth</string>
	<string name="edit_label">Edit</string>
	<string name="delete_label">Delete</string>
	<string name="save_label">Save</string>
	<string name="share_label">Share</string>
	<string name="view_url_label">View URL</string>
	<string name="url_save_confirmation_msg">Are you sure you want to save \'%1$s\'?</string>
	<string name="buffering_message">Buffering. Please wait&#8230;</string>
    <string name="playback_failed">Sorry, the player does not support this type of media file.</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the media could not be played.</string>
	<string name="cannot_play_media_title">Cannot play media file</string>
	<string name="cannot_play_media_message">Sorry, this media file cannot be played.</string>
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current media</string>
    <string name="repeat_all_notif">Repeating all media</string>
    <string name="other_pref">Other</string>
    <string name="about_pref">About</string>
    <string name="pref_backup_and_restore">Backup &amp; restore</string>
    <string name="pref_backup">Backup to JSON file</string>
    <string name="pref_bluetooth_category">Bluetooth</string>
    <string name="pref_bluetooth_options">Bluetooth options</string>
    <string name="pref_restore">Restore from JSON file</string>
    <string name="pref_donate">Donate</string>
	<string name="pref_general_settings_category">General settings</string>
	<string name="pref_playback_category">Playback settings</string>
	<string name="pref_network_category">Network</string>
	<string name="pref_social_media_category">Social media settings</string>
	<string name="pref_ui_category">User interface</string>
	<string name="pref_autosave_title">Autosave URLs</string>
	<string name="pref_autosave_summary">Automatically save opened URLs</string>
	<string name="pref_headphonepause_title">"Headphone pause"</string>
	<string name="pref_headphonepause_summary">"Pause playback when headphones are disconnected"</string>
	<string name="pref_progressivedownload_title">"Progressive download"</string>
	<string name="pref_progressivedownload_summary">"Use progressive download for playback"</string>
	<string name="pref_ffmpegplayer_title">"Use FFmpeg-based player"</string>
	<string name="pref_ffmpegplayer_summary">"Use FFmpeg-based media player for playback"</string>
	<string name="pref_retrievemetadata_title">"Retrieve metadata"</string>
	<string name="pref_retrievemetadata_summary">"Read and display metadata"</string>
	<string name="pref_retrievealbumart_title">"Retrieve album art"</string>
	<string name="pref_retrievealbumart_summary">"Display and store embedded album art"</string>
	<string name="pref_retrieveshoutcastmetadata_title">"Retrieve SHOUTcast metadata"</string>
	<string name="pref_retrieveshoutcastmetadata_summary">"Read and display metadata for SHOUTcast streams (experimental)"</string>
	<string name="pref_theme_title_light">Light</string>
	<string name="pref_theme_title_dark">Dark</string>
	<string name="pref_useproxy_title">"Use proxy"</string>
	<string name="pref_proxy_title">"Proxy"</string>
	<string name="pref_sendscrobblerinfo_title">"Last.fm Scrobbling"</string>
	<string name="pref_sendscrobblerinfo_summary">"Enable Last.fm Scrobbing. Must have \"Simple LastFM Scrobbler\" or \"Scrobble Droid\" installed."</string>
	<string name="pref_sendbluetoothmetadata_title">"Send metadata"</string>
	<string name="pref_sendbluetoothmetadata_summary">"Send metadata to paired bluetooth devices (Note: will automatically send metadata to scrobbling apps)"</string>
	<string name="pref_set_theme_title">Select theme</string>
	<string name="pref_set_theme_summary">Change the appearance of ServeStream</string>
	<string name="pref_wakelock_title">Screen wake lock</string>
	<string name="pref_wakelock_summary">Keep screen from dimming or going to sleep</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
    <string name="set_sleeptimer_label">Sleep timer</string>
    <string name="disable_sleeptimer_label">Off</string>
    <string name="enable_sleeptimer_label">Set</string>
    <string name="sleep_timer_label">Sleep Timer</string>
    <string name="sleep_timer_on_notif">Sleep timer is set for</string>
    <string name="sleep_timer_off_notif">Sleep timer is off</string>
	<string name="streampref_nickname_title">Nickname</string>
	<string name="streampref_connection_category">Connection settings</string>
	<string name="streampref_protocol_title">Protocol</string>
	<string name="streampref_username_title">Username</string>
	<string name="streampref_password_title">Password</string>
	<string name="streampref_hostname_title">Hostname</string>
	<string name="streampref_port_title">Port</string>
	<string name="streampref_path_title">Path</string>
	<string name="streampref_query_title">Query</string>
	<string name="streampref_reference_title">Reference</string>
	<string name="widget_one_track_info_unavailable">"No track info available"</string>
    <string name="text_url_label">Type in the URL of a stream or server here:</string>
    <string name="error_url_label">Enter a valid URL</string>
    <string name="text_nickname_label">Type in a nickname here (optional):</string>
    <string name="no_items_label">There are no items in this list.</string>
    <string name="no_urls_label">You haven\'t entered any urls yet.</string>
    <string name="no_results_label">No results found.</string>
    <string name="no_paired_devices_label">No paired devices found.</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="alarm_delete_confirmation_msg">This alarm will be deleted.</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="media_service_desc">"Allows media to play in the background"</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms.</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="previous_action_title">Previous</string>
    <string name="togglepause_action_title">Toggle Pause</string>
    <string name="next_action_title">Next</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
</resources>