<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ServeStream: A HTTP stream browser/player for Android
 * Copyright 2012 William Seemann
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_ui_category">
    
        <ListPreference
            android:key="theme"
            android:title="@string/pref_set_theme_title"
            android:summary="@string/pref_set_theme_summary"
            android:defaultValue="0"
            android:entryValues="@array/theme_values"
            android:entries="@array/theme_options" />
    
    </PreferenceCategory>
    
	<PreferenceCategory
		android:title="@string/pref_general_settings_category" >

		<CheckBoxPreference
			android:key="autosave"
			android:title="@string/pref_autosave_title"
			android:summary="@string/pref_autosave_summary"
			android:defaultValue="true" />

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_playback_category" >

		<CheckBoxPreference
			android:key="progressivedownload"
			android:title="@string/pref_progressivedownload_title"
			android:summary="@string/pref_progressivedownload_summary"
			android:defaultValue="false" />

		<CheckBoxPreference
			android:key="ffmpegplayer"
			android:title="@string/pref_ffmpegplayer_title"
			android:summary="@string/pref_ffmpegplayer_summary"
			android:defaultValue="false" />
		
		<CheckBoxPreference
			android:key="wakelock"
			android:title="@string/pref_wakelock_title"
			android:summary="@string/pref_wakelock_summary"
			android:defaultValue="true" />
			
		<CheckBoxPreference
			android:key="wifilock"
			android:title="@string/pref_wifilock_title"
			android:summary="@string/pref_wifilock_summary"
			android:defaultValue="true" />
			
		<CheckBoxPreference
			android:key="headphonepause"
			android:title="@string/pref_headphonepause_title"
			android:summary="@string/pref_headphonepause_summary"
			android:defaultValue="true" />

		<CheckBoxPreference
			android:key="retrievemetadata"
			android:title="@string/pref_retrievemetadata_title"
			android:summary="@string/pref_retrievemetadata_summary"
			android:defaultValue="false" />
		
	    <CheckBoxPreference
			android:key="retrievealbumart"
			android:title="@string/pref_retrievealbumart_title"
			android:summary="@string/pref_retrievealbumart_summary"
			android:defaultValue="false" />
		
		<CheckBoxPreference
			android:key="retrieveshoutcastmetadata"
			android:title="@string/pref_retrieveshoutcastmetadata_title"
			android:summary="@string/pref_retrieveshoutcastmetadata_summary"
			android:defaultValue="false" />
		
	</PreferenceCategory>

	<PreferenceCategory
	    android:title="@string/pref_bluetooth_category" >
	    
	    <CheckBoxPreference
			android:key="sendbluetoothmetadata"
			android:title="@string/pref_sendbluetoothmetadata_title"
			android:summary="@string/pref_sendbluetoothmetadata_summary"
			android:defaultValue="true" />
		
	    <Preference
        	android:key="bluetooth_options"
			android:title="@string/pref_bluetooth_options" >
    	</Preference>
	    
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_social_media_category" >
		
	    <CheckBoxPreference
			android:key="sendscrobblerinfo"
			android:title="@string/pref_sendscrobblerinfo_title"
			android:summary="@string/pref_sendscrobblerinfo_summary"
			android:defaultValue="false" />

	</PreferenceCategory>
	    
	<PreferenceCategory
		android:title="@string/other_pref" >
	
		<PreferenceScreen
    		android:title="@string/pref_backup_and_restore"
        	android:persistent="false" >   
	    
	    	<Preference
	        	android:key="backup"
	        	android:title="@string/pref_backup" >
			</Preference>
	
	    	<Preference
	        	android:key="restore"
	        	android:title="@string/pref_restore" >
			</Preference>
	    	
    	</PreferenceScreen>
	
		<Preference 
	    	android:key="about"
			android:title="@string/about_pref" >
		</Preference>
	
    	<Preference
        	android:key="donate"
			android:title="@string/pref_donate" >
    	</Preference>

	</PreferenceCategory>
    		
</PreferenceScreen>